--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "frontend",
+  "name": "lor-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-helmet": "^5.2.1",
+    "react-intl": "^3.3.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "styled-components": "^4.4.0",
+    "styled-reset": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
