--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-intl": "^3.3.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
     "styled-components": "^4.4.0",
     "styled-reset": "^4.0.2"
   },
